# AI_Job_Finder

./: .gitignore  AI_JobFinder.slnx
AI_JobFinder/: AI_JobFinder.slnx
AI_JobFinder/AI_JobFinder/: AI_JobFinder.vcxproj
AI_JobFinder/tests/: CMakeLists.txt  SqlDbHandlerTests.cpp
Database/: Jobs.db
Database/dblib/: README.txt  SqlDbHandler.cpp  SqlDbHandler.h  dblib.slnx  dblib.vcxproj  dblib.vcxproj.filters  framework.h  sqlite3.lib
Database/dblib/dblib/: SqlDbHandler.cpp  SqlDbHandler.h  dblib.vcxproj
Database/dblib/dblib/x64/Debug/: vc145.idb
Database/dblib/dblib/x64/Debug/dblib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dblib.lastbuildstate
Diagrams/: Database.drawio  Untitled Diagram.drawio
Tests/: Tests.vcxproj
Tests/dblib_test/: DatabaseTests.cpp  README.md  dblib_test.vcxproj  dblib_test.vcxproj.filters  pch.cpp  pch.h
Tests/dblib_test/x64/Debug/: dblib_test.dll.recipe  dblib_test.ilk  vc145.idb
Tests/dblib_test/x64/Debug/dblib_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  dblib_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: dblib.exp  dblib.lib  dblib_test.exp  dblib_test.lib
